--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 python:
   - "3.6"
-install: "pip install mkdocs"
+install: "pip install -r docs_requirements.txt"
 
 jobs:
   include:
