--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ jobs:
     #   install: ""
     #   script: ./tests/test_docs.sh
     - stage: deploy
-      script: mkdocs gh-deploy
+      script: ./utils/docs_deploy.sh
       on:
         branch: master
