--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,7 @@ jobs:
     script: bash utils/deploy_docs.sh
     env:
       global:
-      - ENCRYPTION_LABEL: c91c4a142d2a
-      - COMMIT_AUTHOR_EMAIL: germain.gau@gmail.com
+      - ENCRYPTION_LABEL: "c91c4a142d2a"
+      - COMMIT_AUTHOR_EMAIL: "germain.gau@gmail.com"
     on:
       branch: master
-# before_install:
-# - openssl aes-256-cbc -K $encrypted_c91c4a142d2a_key -iv $encrypted_c91c4a142d2a_iv
-#   -in deploy_key.enc -out deploy_key -d
