added details to the documentation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,3 +3,20 @@ theme: 'material'
 pages:
   - Home: index.md
   - Data: data.md
+  - Implementation: implementation.md
+  - Roadmap: roadmap.md
+
+markdown_extensions:
+  - pymdownx.arithmatex
+  - pymdownx.betterem(smart_enable=all)
+  - pymdownx.caret
+  - pymdownx.critic
+  - pymdownx.emoji:
+      emoji_generator: !!python/name:pymdownx.emoji.to_svg
+  - pymdownx.inlinehilite
+  - pymdownx.magiclink
+  - pymdownx.mark
+  - pymdownx.smartsymbols
+  - pymdownx.superfences
+  - pymdownx.tasklist(custom_checkbox=true)
+  - pymdownx.tilde
